# puzzlegame

./: LICENSE  README.md  block.py  door.py  game.py  key.py  level.py  main.py  player.py  puzzlegame.apk  pyproject.toml  screen.py
data/: challenges.json  levels.json
game/: block.py  color.py  door.py  game.py  key.py  level.py  leveleditor.py  levels.py  player.py  screen.py  teleport.py
