[tool.poetry]
name = "puzzlegame"
version = "0.1.0"
description = ""
authors = ["hytonenj"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pygbag = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
